[package]
name = "ferrous-actions"
description = "GitHub actions for Rust written in Rust and compiled to WebAssembly"
version = "0.1.0-beta.2"
repository = "https://github.com/FrancisRussell/ferrous-actions-dev"
license = "MIT"
edition = "2021"
keywords = ["github", "webassembly", "ci", "javascript"]

[lib]
crate-type = ["cdylib"]

[features]
node_bindings = []
github_actions_bindings = ["node_bindings"]
action = ["github_actions_bindings", "node_bindings", "console_error_panic_hook"]
default = ["node_bindings", "github_actions_bindings", "action"]

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.74"
base64 = "0.21.2"
blake3 = { version = "1.4.1", default-features = false }
cargo_metadata = "0.18.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.26", default-features = false, features = ["wasmbind", "std", "clock"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
derivative = "2.2.0"
futures = { version = "0.3.28", default-features = false, features = ["std"]}
getrandom = { version = "0.2.10", features = ["js"] }
humantime = "2.1.0"
itertools = "0.12.0"
js-sys = "0.3.64"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
postcard = { version = "1.0.6", default-features = false, features = ["use-std"] }
regex = { version = "1.9.1", default-features = false, features = ["std"] }
serde_json = "1.0.108"
serde = { version = "1.0", features = [ "derive" ] }
shlex = "1.3.0"
strum = { version = "0.24.1", features = ["derive"] }
target-lexicon = "0.12.11"
thiserror = "1.0.50"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.36"
wasm-bindgen-test = "0.3"

[dependencies.rustup-toolchain-manifest]
git = "https://github.com/FrancisRussell/rustup-toolchain-manifest.git"
rev = "645ae80e22d48b3031774348f5d429957beaa933"
version = "0.2.0"

[dependencies.simple-path-match]
git = "https://github.com/FrancisRussell/simple-path-match.git"
rev = "297ce574bd8a06a86a373eca303078d4f1f30c11"
version = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
